@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -34,7 +33,7 @@ public class PublisherService {
         return publisherRepository.findAll()
                 .stream()
                 .map(publisherMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public PublisherDto getPublisherById(Long id) {
